gwt:run fixed, but web resource not copy to target.

--- a/cellang-webclient/src/main/webapp/home.html
+++ b/cellang-webclient/src/main/webapp/home.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Cellang Webclient</title>
-    <script type="text/javascript" language="javascript" src="module1/module1.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="org.cellang.webclient.gwt.CellangWebclient/org.cellang.webclient.gwt.CellangWebclient.nocache.js"></script>
   </head>
 
   <body>
