--- a/cl-webc/src/main/webapp/home.html
+++ b/cl-webc/src/main/webapp/home.html
@@ -20,7 +20,7 @@
 		height="100%">
 
 		<tr>
-			<td id="_cellang_root" height="100%">Hello</td>
+			<td id="_cellang_root" height="100%"></td>
 		</tr>
 
 	</table>
