--- a/cl-webc/src/main/webapp/home.html
+++ b/cl-webc/src/main/webapp/home.html
@@ -4,6 +4,8 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Cellang Webclient</title>
+    <link rel="stylesheet" href="css/elements.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="css/commons.css" type="text/css" media="screen">
     <script type="text/javascript" language="javascript" src="org.cellang.webc.main.Module/org.cellang.webc.main.Module.nocache.js"></script>
   </head>
 
